--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,5 @@ VersionAssemblyInfo.cs
 
 
 AppData
+NameCheapDDNSClient/obj/Debug/net8.0/NameCheapDDNSClient.AssemblyInfo.cs
+NameCheapDDNSClient/obj/Debug/net8.0/NameCheapDDNSClient.AssemblyInfoInputs.cache
