--- a/eggDDNS/eggDDNS.csproj
+++ b/eggDDNS/eggDDNS.csproj
@@ -12,5 +12,7 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
   </ItemGroup>
-
+    <None Update="makefile">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
 </Project>
