--- a/eggDDNS/eggDDNS.csproj
+++ b/eggDDNS/eggDDNS.csproj
@@ -11,8 +11,12 @@
     <PackageReference Include="serilog" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
-  </ItemGroup>
+    
+    <None Update="eggDDNS.service">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="makefile">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
 </Project>
