--- a/eggDDNS/eggDDNS.csproj
+++ b/eggDDNS/eggDDNS.csproj
@@ -18,5 +18,8 @@
     <None Update="makefile">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <Content Include="AppData\**\*.*">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 </Project>
